Add styled css prop

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "baseUrl": "./src",
-
+    "types": ["styled-components/cssprop"]
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
